# study-like-game

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: README.md  roadmap.md
docs/quests/: q00_boot_observe.md  q00_bootstrap.md  q01_concurrency.md  q01_replay_kit.md  q02_dt_stabilizer.md  q02_physics.md  q03_input_buffer.md  q03_scripting.md  q04_motion_feel.md  q05_camera_hud.md  q06_telemetry_250ms.md  q07_coop_scheduler.md  q08_job_slicing.md  q09_aabb_detect.md  q10_pushback.md  q11_reflect_or_stop.md  q12_determinism_plus.md  q13_lexer.md  q14_parser.md  q15_bytecode.md  q16_vm_runtime.md  q17_vm_ai_apply.md  q18_integrator.md  q19_conservation.md  q20_platform_swap.md  q21_os_boot_path.md
src/: main.c
src/engine/: engine.c  engine.h
src/game/: game.c  game.h
src/platform/: platform.h
src/platform/host_raylib/: platform_host.c
tests/: test_game_determinism.c
